add upcoming events for leagues

--- a/config.json
+++ b/config.json
@@ -25,5 +25,17 @@
       "notifyRoleId": "1244112120946102302",
       "channelId": "565267644627025930"
     }
+  ],
+  "leagues": [
+    {
+      "leagueId": "4370",
+      "notifyRoleId": "1244253264787279873",
+      "channelId": "565267644627025930"
+    },
+    {
+      "leagueId": "4407",
+      "notifyRoleId": "1244253348581081213",
+      "channelId": "565267644627025930"
+    }
   ]
 }
