excluded words fix

--- a/config.json
+++ b/config.json
@@ -30,7 +30,8 @@
     {
       "leagueId": "4370",
       "notifyRoleId": "1244253264787279873",
-      "channelId": "565267644627025930"
+      "channelId": "565267644627025930",
+      "excludedWords": ["practice"]
     },
     {
       "leagueId": "4407",
