--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/charlesabarnes/discord-sport-notifier#readme",
   "dependencies": {
-    "discord.js": "^14.15.2",
+    "@types/node": "^22.10.0",
+    "axios": "^1.7.8",
+    "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "mongodb": "^6.6.2"
+    "express": "^4.21.1",
+    "mongodb": "^6.6.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.2"
   }
 }
