--- a/config.json
+++ b/config.json
@@ -24,6 +24,11 @@
       "teamId": "134886",
       "notifyRoleId": "1244112120946102302",
       "channelId": "565267644627025930"
+    },
+    {
+      "teamId": "134867",
+      "notifyRoleId": "1338717587672006747",
+      "channelId": "565267644627025930"
     }
   ],
   "leagues": [
