--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:ui": "node dist/src/server.js",
+    "start:all": "concurrently \"npm run start\" \"npm run start:ui\"",
     "dev": "tsc && node index.js",
+    "dev:ui": "ts-node src/server.ts",
+    "dev:all": "tsc && concurrently \"node index.js\" \"ts-node src/server.ts\"",
     "build": "tsc"
   },
   "repository": {
@@ -21,13 +25,28 @@
   "dependencies": {
     "@types/node": "^22.10.0",
     "axios": "^1.7.8",
+    "body-parser": "^2.2.0",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "mongodb": "^6.6.2",
-    "ts-node": "^10.9.2"
+    "mongoose": "^8.13.2",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.18.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-discord": "^0.1.14",
+    "concurrently": "^9.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
 }
