--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2020",
     "module": "commonjs",
-    "strict": true,
+    "moduleResolution": "node",
+    "lib": ["ES2020", "DOM"],
+    "strict": false,
     "esModuleInterop": true,
-    "outDir": "./dist"
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "noImplicitAny": false
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "index.ts"]
 }
